--- a/documentation/vagrant.html
+++ b/documentation/vagrant.html
@@ -17,11 +17,11 @@ base_url: "/"
 
     <ol>
         <li>Install <a href="https://docs.vagrantup.com/v2/installation/">Vagrant</a> and <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a></li>
-        <li>Clone this repo <code>git clone https://github.com/SMSG-MAC-DEV/MacPatch-Vagrant.git</code></li>
+        <li>Clone the repo <code>git clone https://github.com/SMSG-MAC-DEV/MacPatch-Vagrant.git</code></li>
         <li><code>cd</code> into the project directory</li>
         <li>Start the VM by running <code>vagrant up</code></li>
     </ol>
-    <p>You now have a built MacPatch sever. Now follow the <a href="{{ page.base_url }}documentation/quickstart-linux.html#console">Configure MacPatch - Admin Console</a> section to complete the setup.</p>
+    <p>You now have a MacPatch sever. But you will still need to follow the <a href="{{ page.base_url }}documentation/quickstart-linux.html#console">Configure MacPatch - Admin Console</a> section of the documentation to complete the setup.</p>
 
     <h2>Possible issues with an SSL proxy</h2>
 
