added link to building the client page

--- a/documentation/quickstart-osx.html
+++ b/documentation/quickstart-osx.html
@@ -238,7 +238,7 @@ mysql&gt; quit
 
     <h5>Upload the Client Agent</h5>
 
-    <p>To upload a client agent you will need to build the client first. Please follow the "<strong>Building the Client</strong>" document before continuing.</p>
+    <p>To upload a client agent you will need to build the client first. Please follow the <a href="https://macpatch.github.io/documentation/building-the-client.html">Building the Client</a> document before continuing.</p>
 
     <ul>
     <li>Go to "Admin-> Client Agents -> Deploy"</li>
