added id to patch criteria language

--- a/documentation/custom-patch-content.html
+++ b/documentation/custom-patch-content.html
@@ -48,7 +48,7 @@ base_url: "/"
 
     <p>Here you can add pre &amp; post requisite packages. Also, once the patch is created you will need to make it active. This can only be done once the initial patch has been created.</p>
 
-    <h3>Patch Criteria Language - Cheat Sheet <a name="cheatSheet"></a></h3>
+    <h3 id="patch_criteria_lang">Patch Criteria Language <a name="cheatSheet"></a></h3>
 
     <table class="table table-bordered table-striped">
         <tr>
