added pip mysql-connector

--- a/documentation/quickstart-osx.html
+++ b/documentation/quickstart-osx.html
@@ -35,6 +35,7 @@ base_url: "/"
     <pre>sudo easy_install pip  # if you don't already have pip
 sudo pip install requests
 sudo pip install argparse
+sudo pip install --allow-external mysql-connector-python mysql-connector-python
     </pre>
 
     <h2>Download and build the Server software</h2>
